--- a/conference.html
+++ b/conference.html
@@ -33,6 +33,15 @@
 <h1>Publications</h1>
 </div>
 <h2>Conference</h2>
+<h4>Year 2026</h4>
+<ul>
+<li><p>[C57] P. Chen, L. Cheng, <b>L. You</b>, and P. Gerstoft, “A transferable model for wireless user positioning with few-shot learning,” in <b><i>Proc. IEEE ICASSP 2026</i></b>, Barcelona, Spain, May 2026, 1-5.</p>
+</li>
+<li><p>[C56] C. Xie, <b>L. You*</b>, R. Chen, G. He, and X. Q. Gao, “MML-based 3D channel fingerprints construction for low-altitude communications,” in <b><i>Proc. IEEE WCNC 2026</i></b>, Kuala Lumpur, Malaysia, Apr. 2026, 1-6.</p>
+</li>
+<li><p>[C55] M. Qian, X. Mu, <b>L. You*</b>, and M. Matthaiou, “Spectral efficiency analysis of multiuser pinching-antenna systems,” in <b><i>Proc. IEEE WCNC 2026</i></b>, Kuala Lumpur, Malaysia, Apr. 2026, 1-6.</p>
+</li>
+</ul>
 <h4>Year 2025</h4>
 <ul>
 <li><p>[C54] M. Qian, X. Mu, <b>L. You*</b>, and M. Matthaiou, “Beamforming design for CAPA-based multicast communications,” in <b><i>Proc. IEEE GLOBECOM 2025</i></b>, Taipei, Taiwan, Dec. 2025, 1-6.</p>
@@ -169,6 +178,7 @@
 </table>
 </body>
 </html>
+
 
 
 
