--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Email: lyou@seu.edu.cn <br />
 <p><ul>
 <li><p>[<span class="statement">2026.01</span>]  Two papers were accepted by IEEE WCNC 2026. (课题组2篇论文被2026 IEEE WCNC会议录用)</p>
 </li>
-<li><p>[<span class="statement">2026.01</span>]  Mengyu Qian's paper on continuous aperture array-based communications was accepted by IEEE Transactions on Communications. (潜梦羽的关于连续孔径阵列通信的论文被IEEE Transactions on Communications录用)</p>
+<li><p>[<span class="statement">2026.01</span>]  Mengyu Qian's paper on continuous aperture array-based communications was accepted by IEEE Transactions on Communications. (潜梦羽的关于连续孔径阵列通信的论文被IEEE Transactions on Communications录用) <a href="https://ieeexplore.ieee.org/document/11358899">[link]</a></p>
 </li>
 <li><p>[<span class="statement">2025.12</span>]  Zhenzhou Jin's paper on generative diffusion models for massive MIMO was accepted by IEEE Communications Magazine. (金振洲的关于生成式扩散模型在大规模MIMO中的应用的论文被IEEE Communications Magazine录用)</p>
 </li>
@@ -246,6 +246,7 @@ Email: lyou@seu.edu.cn <br />
 </table>
 </body>
 </html>
+
 
 
 
