--- a/journal.html
+++ b/journal.html
@@ -62,7 +62,7 @@
 </li>
 <li><p>[J101] Y. Ye, <b>L. You*</b>, H. Xu, A. Elzanaty, K.-K. Wong, and X. Q. Gao, “Specific absorption rate-aware multiuser MIMO assisted by fluid antenna system,” <b><i>IEEE Transactions on Wireless Communications</i></b>, vol. 25, pp. 758-770, 2026. [<a href="https://ieeexplore.ieee.org/document/11080242">Full Paper</a>]</p>
 </li>
-<li><p>[J100] Q. Zhang, J. H. Huang, J. Jiao, L. Xu, H. Liu, Y. Shi, X. J. Zhang, Y. Wang, S. Yang, K. Zhang, Z. Gao, S. Wang, <b>L. You</b>, D. M. Wang, D. X. Zhao, K. Li, J. Zhou, Z. Ji, X. Hu, J. Si, Z. Hou, L. Hu, D. Zhang, Y. Ma, N. Zhao, S. Wu, T. Jiang, X. Q. Gao, and X. H. You, “Direct satellite-to-device communications: Technical routes, architecture, and enabling technologies,” <b><i>Science China Information Sciences</i></b>, vol. 69, no. 2, Article ID: 121301, Jan. 2026. [<a href="https://link.springer.com/article/10.1007/s11432-024-4408-1">Full Paper</a>]</p>
+<li><p>[J100] Q. Zhang, J. H. Huang, J. Jiao, L. Xu, H. Liu, Y. Shi, X. J. Zhang, Y. Wang, S. Yang, K. Zhang, Z. Gao, S. Wang, <b>L. You</b>, D. M. Wang, D. X. Zhao, K. Li, J. Zhou, Z. Ji, X. Hu, J. Si, Z. Hou, L. Hu, D. Zhang, Y. Ma, N. Zhao, S. Wu, T. Jiang, X. Q. Gao, and X. H. You, “Direct satellite-to-device communications: Technical routes, architecture, and enabling technologies,” <b><i>Science China Information Sciences</i></b>, vol. 69, no. 2, Article ID: 121301, Jan. 2026.</p>
 </li>
 <li><p>[J99] H. Li, <b>L. You*</b>, H. Zhou, Y. Wang, F. Jiang, and X. Q. Gao*, “Massive MIMO for multi-LEO satellite positioning,” <b><i>IEEE Wireless Communications Letters</i></b>, vol. 15, pp. 785-789, 2026. [<a href="https://ieeexplore.ieee.org/document/11277304">Full Paper</a>]</p>
 </li>
@@ -91,7 +91,7 @@
 </li>
 <li><p>[J88] J. Fang, Y. Liang, G. Sun, H. Hou, Y. Wang, <b>L. You</b>, and W. J. Wang*, “Polar-coded tensor-based unsourced random access with soft decoding,” <b><i>IEEE Transactions on Communications</i></b>, vol. 73, no. 9, pp. 7044-7057, Sep. 2025. [<a href="https://ieeexplore.ieee.org/document/10938717">Full Paper</a>]</p>
 </li>
-<li><p>[J87] Q. Zhang, L. Xu, J. H. Huang, T. Yang, J. Jiao, Y. Wang, Y. Shi, C. Y. Zhang, X. J. Zhang, K. Zhang, Y. P. Gong, N. Deng, N. Zhao, Z. Gao, S. J. Han, X. D. Xu, <b>L. You</b>, D. M. Wang, S. Jiang, D. X. Zhao, N. Zhang, L. J. Hu, X. W. He, Y. H. Li, X. Q. Gao, and X. H. You, “Distributed satellite information networks: Architecture, enabling technologies, and trends,” <b><i>Science China Information Sciences</i></b>, vol. 68, no. 9, Article ID: 190301, Sep. 2025. [<a href="https://www.sciengine.com/SCIS/articleIndex?doi=10.1007/s11432-024-4408-1&scroll=">Full Paper</a>]</p>
+<li><p>[J87] Q. Zhang, L. Xu, J. H. Huang, T. Yang, J. Jiao, Y. Wang, Y. Shi, C. Y. Zhang, X. J. Zhang, K. Zhang, Y. P. Gong, N. Deng, N. Zhao, Z. Gao, S. J. Han, X. D. Xu, <b>L. You</b>, D. M. Wang, S. Jiang, D. X. Zhao, N. Zhang, L. J. Hu, X. W. He, Y. H. Li, X. Q. Gao, and X. H. You, “Distributed satellite information networks: Architecture, enabling technologies, and trends,” <b><i>Science China Information Sciences</i></b>, vol. 68, no. 9, Article ID: 190301, Sep. 2025.  [<a href="https://link.springer.com/article/10.1007/s11432-024-4408-1">Full Paper</a>]</p>
 </li>
 <li><p>[J86] Y. Ye, <b>L. You*</b>, H. Xu, A. Elzanaty, K.-K. Wong, and X. Q. Gao, “SCNR maximization for MIMO ISAC assisted by fluid antenna system,” <b><i>IEEE Transactions on Vehicular Technology</i></b>, vol. 74, no. 8, pp. 13272-13277, Aug. 2025. [<a href="https://ieeexplore.ieee.org/document/10949741">Full Paper</a>]</p>
 </li>
@@ -292,6 +292,7 @@
 </table>
 </body>
 </html>
+
 
 
 
