--- a/journal.html
+++ b/journal.html
@@ -62,7 +62,7 @@
 </li>
 <li><p>[J101] Y. Ye, <b>L. You*</b>, H. Xu, A. Elzanaty, K.-K. Wong, and X. Q. Gao, “Specific absorption rate-aware multiuser MIMO assisted by fluid antenna system,” <b><i>IEEE Transactions on Wireless Communications</i></b>, vol. 25, pp. 758-770, 2026. [<a href="https://ieeexplore.ieee.org/document/11080242">Full Paper</a>]</p>
 </li>
-<li><p>[J100] Q. Zhang, J. H. Huang, J. Jiao, L. Xu, H. Liu, Y. Shi, X. J. Zhang, Y. Wang, S. Yang, K. Zhang, Z. Gao, S. Wang, <b>L. You</b>, D. M. Wang, D. X. Zhao, K. Li, J. Zhou, Z. Ji, X. Hu, J. Si, Z. Hou, L. Hu, D. Zhang, Y. Ma, N. Zhao, S. Wu, T. Jiang, X. Q. Gao, and X. H. You, “Direct satellite-to-device communications: Technical routes, architecture, and enabling technologies,” <b><i>Science China Information Sciences</i></b>, vol. 69, no. 2, Article ID: 121301, Jan. 2026.</p>
+<li><p>[J100] Q. Zhang, J. H. Huang, J. Jiao, L. Xu, H. Liu, Y. Shi, X. J. Zhang, Y. Wang, S. Yang, K. Zhang, Z. Gao, S. Wang, <b>L. You</b>, D. M. Wang, D. X. Zhao, K. Li, J. Zhou, Z. Ji, X. Hu, J. Si, Z. Hou, L. Hu, D. Zhang, Y. Ma, N. Zhao, S. Wu, T. Jiang, X. Q. Gao, and X. H. You, “Direct satellite-to-device communications: Technical routes, architecture, and enabling technologies,” <b><i>Science China Information Sciences</i></b>, vol. 69, no. 2, Article ID: 121301, Jan. 2026. [<a href="https://link.springer.com/article/10.1007/s11432-025-4552-y">Full Paper</a>]</p>
 </li>
 <li><p>[J99] H. Li, <b>L. You*</b>, H. Zhou, Y. Wang, F. Jiang, and X. Q. Gao*, “Massive MIMO for multi-LEO satellite positioning,” <b><i>IEEE Wireless Communications Letters</i></b>, vol. 15, pp. 785-789, 2026. [<a href="https://ieeexplore.ieee.org/document/11277304">Full Paper</a>]</p>
 </li>
@@ -292,6 +292,7 @@
 </table>
 </body>
 </html>
+
 
 
 
