--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@ Email: lyou@seu.edu.cn <br />
 </td></tr></table>
 <h2>News</h2> 
 <p><ul>
+<li><p>[<span class="statement">2026.02</span>]  Mengyu Qian's paper on pinching-antenna-based communications was accepted by IEEE Transactions on Communications. (潜梦羽的关于夹持天线通信的论文被IEEE Transactions on Communications录用)</p>
+</li>
 <li><p>[<span class="statement">2026.01</span>]  Two papers were accepted by IEEE WCNC 2026. (课题组2篇论文被2026 IEEE WCNC会议录用)</p>
 </li>
 <li><p>[<span class="statement">2026.01</span>]  Mengyu Qian's paper on continuous aperture array-based communications was accepted by IEEE Transactions on Communications. (潜梦羽的关于连续孔径阵列通信的论文被IEEE Transactions on Communications录用) <a href="https://ieeexplore.ieee.org/document/11358899">[link]</a></p>
@@ -87,13 +89,13 @@ Email: lyou@seu.edu.cn <br />
 </li>
 <li><p>[<span class="statement">2025.10</span>]  肖翔获东南大学优秀硕士专业学位论文</p>
 </li>
-<li><p>[<span class="statement">2025.10</span>]  Zhenzhou Jin's paper on channel fingerprint was accepted by IEEE Transactions on Wireless Communications. (金振洲的关于信道图谱的论文被IEEE Transactions on Wireless Communications录用) <a href="https://ieeexplore.ieee.org/document/11220249">[link]</a></p>
-</li>
 </ul></p>
 <div class="content-container">  
 <div class="toggle-icon" id="toggleIcon"></div> View More Earlier News 
 <div class="toggle-content" id="toggleContent">  
 <p><ul>
+<li><p>[<span class="statement">2025.10</span>]  Zhenzhou Jin's paper on channel fingerprint was accepted by IEEE Transactions on Wireless Communications. (金振洲的关于信道图谱的论文被IEEE Transactions on Wireless Communications录用) <a href="https://ieeexplore.ieee.org/document/11220249">[link]</a></p>
+</li>
 <li><p>[<span class="statement">2025.09</span>]  Zhenzhou Jin's paper on channel fingerprint was accepted by IEEE Transactions on Vehicular Technology. (金振洲的关于信道图谱的论文被IEEE Transactions on Vehicular Technology录用) <a href="https://ieeexplore.ieee.org/document/11190081">[link]</a></p>
 </li>
 <li><p>[<span class="statement">2025.09</span>]  Xinyi Guo's paper on massive MIMO federated learning was accepted by IEEE Transactions on Vehicular Technology. (郭鑫怡的关于大规模MIMO联邦学习的论文被IEEE Transactions on Vehicular Technology录用) <a href="https://ieeexplore.ieee.org/document/11192777">[link]</a></p>
@@ -246,6 +248,7 @@ Email: lyou@seu.edu.cn <br />
 </table>
 </body>
 </html>
+
 
 
 
