--- a/journal.html
+++ b/journal.html
@@ -35,6 +35,8 @@
 <h2>Journal</h2>
 <h4>Preprint</h4>
 <ul>
+<li><p>[P8] M. Qian, X. Mu, <b>L. You*</b>, and M. Matthaiou, “Pinching-antenna-based communications: Spectral efficiency analysis and deployment strategies,” <b><i>IEEE Transactions on Communications</i></b>, 2026.</p>
+</li>
 <li><p>[P7] M. Qian, X. Mu, <b>L. You*</b>, and M. Matthaiou, “Continuous aperture array (CAPA)-based multi-group multicast communications,” <b><i>IEEE Transactions on Communications</i></b>, 2026. [<a href="https://ieeexplore.ieee.org/document/11358899">Full Paper</a>]</p>
 </li>
 <li><p>[P6] Z. Jin, <b>L. You*</b>, H. Zhou, Y. Wang, X. Liu, X. Gong, X. Q. Gao, D. W. K. Ng, and X.-G. Xia, “GDM4MMIMO: Generative diffusion models for massive MIMO communications,” <b><i>IEEE Communications Magazine</i></b>, 2025.</p>
@@ -292,6 +294,7 @@
 </table>
 </body>
 </html>
+
 
 
 
