--- a/journal.html
+++ b/journal.html
@@ -35,9 +35,7 @@
 <h2>Journal</h2>
 <h4>Preprint</h4>
 <ul>
-<li><p>[P8] M. Qian, X. Mu, <b>L. You*</b>, and M. Matthaiou, “Pinching-antenna-based communications: Spectral efficiency analysis and deployment strategies,” <b><i>IEEE Transactions on Communications</i></b>, 2026.</p>
-</li>
-<li><p>[P7] M. Qian, X. Mu, <b>L. You*</b>, and M. Matthaiou, “Continuous aperture array (CAPA)-based multi-group multicast communications,” <b><i>IEEE Transactions on Communications</i></b>, 2026. [<a href="https://ieeexplore.ieee.org/document/11358899">Full Paper</a>]</p>
+<li><p>[P7] M. Qian, X. Mu, <b>L. You*</b>, and M. Matthaiou, “Pinching-antenna-based communications: Spectral efficiency analysis and deployment strategies,” <b><i>IEEE Transactions on Communications</i></b>, 2026. [<a href="https://ieeexplore.ieee.org/document/11391537">Full Paper</a>]</p>
 </li>
 <li><p>[P6] Z. Jin, <b>L. You*</b>, H. Zhou, Y. Wang, X. Liu, X. Gong, X. Q. Gao, D. W. K. Ng, and X.-G. Xia, “GDM4MMIMO: Generative diffusion models for massive MIMO communications,” <b><i>IEEE Communications Magazine</i></b>, 2025.</p>
 </li>
@@ -54,9 +52,11 @@
 </ul>  
 <h4>Year 2026</h4>
 <ul>
+<li><p>[J106] M. Qian, X. Mu, <b>L. You*</b>, and M. Matthaiou, “Continuous aperture array (CAPA)-based multi-group multicast communications,” <b><i>IEEE Transactions on Communications</i></b>, vol. 74, pp. 3787-3801, 2026. [<a href="https://ieeexplore.ieee.org/document/11358899">Full Paper</a>]</p>
+</li>
 <li><p>[J105] K. Huang, <b>L. You*</b>, M. Qian, B. Jiang, and X. Q. Gao, “QoS-guaranteed MIMO SWIPT assisted by dynamic metasurface antenna,” <b><i>IEEE Transactions on Vehicular Technology</i></b>, vol. 75, no. 1, pp. 1637-1642, Jan. 2026. [<a href="https://ieeexplore.ieee.org/document/11096022">Full Paper</a>]</p>
 </li>
-<li><p>[J104] Y. Zhao, <b>L. You*</b>, J. Tang, M. Qian, B. Jiang, X.-G. Xia, and X. Q. Gao, “Massive MIMO-OFDM channel acquisition with multi-group adjustable phase shift pilots,” <b><i>IEEE Transactions on Communications</i></b>, vol. 745, pp. 1702-1716, 2026. [<a href="https://ieeexplore.ieee.org/document/11251314">Full Paper</a>]</p>
+<li><p>[J104] Y. Zhao, <b>L. You*</b>, J. Tang, M. Qian, B. Jiang, X.-G. Xia, and X. Q. Gao, “Massive MIMO-OFDM channel acquisition with multi-group adjustable phase shift pilots,” <b><i>IEEE Transactions on Communications</i></b>, vol. 74, pp. 1702-1716, 2026. [<a href="https://ieeexplore.ieee.org/document/11251314">Full Paper</a>]</p>
 </li>
 <li><p>[J103] Z. Jin, <b>L. You*</b>, X. Li, Z. Gao, Y. Liu, X.-G. Xia, and X. Q. Gao, “Channel fingerprint construction for massive MIMO: A deep conditional generative approach,” <b><i>IEEE Transactions on Wireless Communications</i></b>, vol. 25, pp. 6096-6113, 2026. [<a href="https://ieeexplore.ieee.org/document/11220249">Full Paper</a>]</p>
 </li>
@@ -294,6 +294,7 @@
 </table>
 </body>
 </html>
+
 
 
 
