--- a/journal.html
+++ b/journal.html
@@ -35,8 +35,6 @@
 <h2>Journal</h2>
 <h4>Preprint</h4>
 <ul>
-<li><p>[P6] M. Qian, X. Mu, <b>L. You*</b>, and M. Matthaiou, “Pinching-antenna-based communications: Spectral efficiency analysis and deployment strategies,” <b><i>IEEE Transactions on Communications</i></b>, 2026. [<a href="https://ieeexplore.ieee.org/document/11391537">Full Paper</a>]</p>
-</li>
 <li><p>[P5] Z. Jin, <b>L. You*</b>, H. Zhou, Y. Wang, X. Liu, X. Gong, X. Q. Gao, D. W. K. Ng, and X.-G. Xia, “GDM4MMIMO: Generative diffusion models for massive MIMO communications,” <b><i>IEEE Communications Magazine</i></b>, 2025.</p>
 </li>
 <li><p>[P4] H. Che, <b>L. You*</b>, J. Wang, Z. Jin, C. Xie, and X. Q. Gao, “Channel charting-assisted pilot reuse for uplink XL-MIMO transmission,” <b><i>Chinese Journal of Electronics</i></b>, 2025.</p>
@@ -50,6 +48,8 @@
 </ul>  
 <h4>Year 2026</h4>
 <ul>
+<li><p>[J108] M. Qian, X. Mu, <b>L. You*</b>, and M. Matthaiou, “Pinching-antenna-based communications: Spectral efficiency analysis and deployment strategies,” <b><i>IEEE Transactions on Communications</i></b>, vol. 74, pp. 4758-4771, 2026. [<a href="https://ieeexplore.ieee.org/document/11391537">Full Paper</a>]</p>
+</li>
 <li><p>[J107] Q. Kong, <b>L. You*</b>, H. Zhou, Y. Zhu, Y. Wang, and X. Q. Gao, “Robust precoding for cooperative massive MIMO LEO satellite-terrestrial networks,” <b><i>IEEE Transactions on Vehicular Technology</i></b>, vol. 75, no. 2, pp. 3440-3445, Feb. 2026. [<a href="https://ieeexplore.ieee.org/document/11143887">Full Paper</a>]</p>
 </li>
 <li><p>[J106] M. Qian, X. Mu, <b>L. You*</b>, and M. Matthaiou, “Continuous aperture array (CAPA)-based multi-group multicast communications,” <b><i>IEEE Transactions on Communications</i></b>, vol. 74, pp. 3787-3801, 2026. [<a href="https://ieeexplore.ieee.org/document/11358899">Full Paper</a>]</p>
@@ -294,6 +294,7 @@
 </table>
 </body>
 </html>
+
 
 
 
