--- a/conference.html
+++ b/conference.html
@@ -35,6 +35,8 @@
 <h2>Conference</h2>
 <h4>Year 2026</h4>
 <ul>
+<li><p>[C58] Y. Zhao, Z. Jin, J. Tang, <b>L. You*</b>, C. Sun, X.-G. Xia, and X. Q. Gao, “Joint localization and orientation assisted by massive MIMO-OFDM triple-beam fingerprints,” in <b><i>Proc. IEEE WCNC 2026</i></b>, Kuala Lumpur, Malaysia, Apr. 2026, 1-6.</p>
+</li>
 <li><p>[C57] P. Chen, L. Cheng, <b>L. You</b>, and P. Gerstoft, “A transferable model for wireless user positioning with few-shot learning,” in <b><i>Proc. IEEE ICASSP 2026</i></b>, Barcelona, Spain, May 2026, 1-5.</p>
 </li>
 <li><p>[C56] C. Xie, <b>L. You*</b>, R. Chen, G. He, and X. Q. Gao, “MML-based 3D channel fingerprints construction for low-altitude communications,” in <b><i>Proc. IEEE WCNC 2026</i></b>, Kuala Lumpur, Malaysia, Apr. 2026, 1-6.</p>
@@ -178,6 +180,7 @@
 </table>
 </body>
 </html>
+
 
 
 
