--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@ Email: lyou@seu.edu.cn <br />
 </td></tr></table>
 <h2>News</h2> 
 <p><ul>
+<li><p>[<span class="statement">2026.02</span>]  Yu Zhao's paper on massive MIMO-OFDM channel fingerprints was accepted by IEEE WCNC workshop 2026. (赵宇的关于大规模MIMO-OFDM信道图谱的论文被2026 IEEE WCNC workshop录用)</p>
+</li>
 <li><p>[<span class="statement">2026.02</span>]  Mengyu Qian's paper on pinching-antenna-based communications was accepted by IEEE Transactions on Communications. (潜梦羽的关于夹持天线通信的论文被IEEE Transactions on Communications录用) <a href="https://ieeexplore.ieee.org/document/11391537">[link]</a></p>
 </li>
 <li><p>[<span class="statement">2026.01</span>]  Two papers were accepted by IEEE WCNC 2026. (课题组2篇论文被2026 IEEE WCNC会议录用)</p>
@@ -248,6 +250,7 @@ Email: lyou@seu.edu.cn <br />
 </table>
 </body>
 </html>
+
 
 
 
